# library_project

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
src/bridge/: net_client.h  net_common.h  net_message.h  net_server.h  net_tsqueue.h
src/client/: MainActivity.h  main.cpp
src/client/activites/: bookCart.h  bookPreview.h  dashboard.h  login.h
src/client/components/: book.h  bookCard.h  bookWrapper.h
src/client/helpers/: textOverflow.h
src/client/state/: observer.h  state.h
src/server/: main.cpp
